delete footer form, edit some posts

--- a/app/single-bussiness.html
+++ b/app/single-bussiness.html
@@ -119,9 +119,9 @@
 				<p>Если вы зайдете на Amazon.com и посмотрите "объявления" (объявление с товаром называется листинг) о продаже различных
 				товаров, то вы увидите, что через одно объявление один и тот же товар продают несколько разных продавцов по разной цене. Всё это происходит потому, что все листинги, которые созданы продавцами на Amazon, принадлежат не продавцам, они принадлежат Amazon, т.е. они находятся в "общем пользовании", и любой человек, у кого есть точно такой же товар (за исключением запатентованных и брендированных товаров) может подключиться к данному объявлению и начать продавать свой товар. При этом 50-80% продаж товара будет делать основной владелец объявления, а оставшаяся часть будет распределяться между другими продавцами, которые подключились к данному объявлению.</p>
 
-				<p>Стратегия Онлайн Арбитраж заключается в том, что вы находите объявление, к которому можно подключиться, находите поставщика данного товара по выгодной цене (поставщиков ищем в США - это обеспечивает быструю доставку товара и необходимую документацию для того чтобы подключиться к объявлению), заказываете товар и доставляете на склад Amazon, подключаетесь к объявлению, и абсолютно без вложений в рекламу просто ждете, пока ваш товар распродастся через уже готовое объявление.</p>
+				<p>Стратегия Онлайн Арбитраж заключается в том, что вы находите объявление, к которому можно подключиться, находите поставщика данного товара по выгодной цене, заказываете товар и доставляете на склад Amazon, подключаетесь к объявлению, и абсолютно без вложений в рекламу просто ждете, пока ваш товар распродастся через уже готовое объявление.</p>
 
-				<p>Например, вы нашли объявление, через которое продается 30 единиц товара в день. 22 продажи в день уходит основному продавцу, и 8 продаж уходит на других продавцов. Допустим, к объявлению подключено еще 3 человека, вы становитесь 4-ым. Вы закупаете товар, например 60 единиц, и подключаетесь к этому объявлению. Примерно за месяц вы распродадите данный товар, проанализируете результат, и сможете закупить еще партию. Плюс стратегии заключается в том, что таких товаров на Amazon сотни тысяч. И вы сможете продавать десятки товарных наименований, не занимаясь рекламой и продвижением. Маржинальность товаров при этом доходит до 250%. Рекомендованный бюджет для запуска бизнеса по данной стратегии от 1500$.</p>
+				<p>Например, вы нашли объявление, через которое продается 30 единиц товара в день. 22 продажи в день уходит основному продавцу, и 8 продаж уходит на других продавцов. Допустим, к объявлению подключено еще 3 человека, вы становитесь 4-ым. Вы закупаете товар, например 60 единиц, и подключаетесь к этому объявлению. Примерно за месяц вы распродадите данный товар, проанализируете результат, и сможете закупить еще партию. Плюс стратегии заключается в том, что таких товаров на Amazon сотни тысяч. И вы сможете продавать десятки товарных наименований, не занимаясь рекламой и продвижением. Чистая прибыль с продажи партии хорошего товара от 50 до 120%. Бюджет для запуска по данной стратегии с учетов всех расходов от 6-7 тысяч долларов.</p>
 
 				<h2>2. Private Label.</h2>
 
@@ -131,51 +131,12 @@
 				Онлайн Арбитраж. Но тут очень важно знать нюансы работы Amazon и его правила, иначе можно потерять огромное количество
 				продаж.</p>
 
-				<p>Плюс данной стратегии в том, что вам нужно заниматься только 1 товаром и вы можете полностью контролировать продвижение своего товара, вы можете увеличивать количество продаж своего товара. Запустив и раскрутив один товар по данной стратегии он будет приносить вам прибыль на протяжении нескольких лет. При данной стратегии товар придется производить в Китае (можно и в других странах, но Китай обычно выгоднее), нужно разрабатывать уникальную упаковку и производить товар под своим брендом (чтобы было меньше желающих подключиться к объявлению), из-за этого сроки производства товара с доставкой обычно занимают 1,5-2 месяца, плюс уходит время на раскрутку товара. Рекомендованный бюджет для запуска бизнеса по данной стратегии от 7000$.</p>
+				<p>Плюс данной стратегии в том, что вам нужно заниматься только 1 товаром и вы можете полностью контролировать продвижение своего товара, вы можете увеличивать количество продаж своего товара. Запустив и раскрутив один товар по данной стратегии он будет приносить вам прибыль на протяжении нескольких лет. При данной стратегии товар придется производить в Китае (можно и в других странах, но Китай обычно выгоднее), нужно разрабатывать уникальную упаковку и производить товар под своим брендом (чтобы было меньше желающих подключиться к объявлению), из-за этого сроки производства товара с доставкой обычно занимают 3-5 месяцев, плюс уходит время на раскрутку товара. Рекомендованный бюджет для запуска бизнеса по данной стратегии от 20000$.</p>
 
 				<p><strong>Какая стратегия лучше?</strong> У каждой стратегии свои сильные стороны и на каждой стратегии можно очень хорошо зарабатывать, если иметь знания и опыт. Мы рекомендуем начинать работу с Amazon со стратегии Онлайн Арбитраж, т.к. на ней можно быстрее начать зарабатывать и для старта нужны меньшие вложения. А когда вы уже поймете, как устроен этот бизнес изнутри, то можно развиваться и по стратегии Private Label.</p>
 
 				<a href="https://amazing-cash.ru/blog/index-blog.html" class="back-to-blog">Вернуться к списку статей</a>
 
-			</div>
-		</div>
-	</section>
-
-
-
-	<section class="callback-section">
-		<div class="container">
-
-			<div class="callback-grid">
-				<div class="callback-text">
-					<h5>Хотите начать зарабатывать онлайн в долларах?</h5>
-					<p>Оставьте заявку, и получите пошаговый план запуска бизнеса на Amazon</p>
-				</div>
-
-
-				<div id="booking" class="callback-form">
-
-					<form class="form open-form" onsubmit="ym(65271577,'reachGoal','open-form')" action="https://app.getresponse.com/add_subscriber.html" accept-charset="utf-8" method="post">
-						<div class="success"><span>Спасибо за заявку!<br><span>наш менеджер свяжется с вами в ближайшее
-						время</span></span></div>
-						<!-- Hidden Required Fields -->
-						<input type="hidden" name="project_name" value="Франшиза 'Рук не хватает'">
-						<input type="hidden" name="form_subject" value="План запуска">
-						<!-- END Hidden Required Fields -->
-						<div class="inputs">
-							<input class="input" type="text" name="Имя" placeholder="Ваше имя" required>
-							<input class="input phone" id="phone" type="text" name="Телефон" placeholder="Номер телефона" required>
-							<input class="input" type="text" name="email" placeholder="E-mail" required>
-						</div>
-
-						<button class="button submit-button"><span>Получить план</span></button>
-						<div class="confirm">
-							<input type="checkbox" required checked>
-							<p class="personal-data">Нажимая кнопку «Оставить заявку», я даю свое согласие на использование <br>и обработку моих персональных данных в соответствии с ч. 1 ст. 9 ФЗ <br>от 27.07.2006 г. № 152 «О персональных данных»</p>
-						</div>
-					</form>
-
-				</div>
 			</div>
 		</div>
 	</section>
