--- a/app/single-faq.html
+++ b/app/single-faq.html
@@ -80,7 +80,7 @@
 
 				<h2>1. Сколько нужно денег на старт?</h2>
 
-				<p>В чем основное преимущество бизнеса на Amazon, так это в минимальных вложениях, которые потребуются вам на старт. В постах ниже я описывал запуск продукта по стратегии Private Label, когда вы запускаете продукт под собственным брендом (в 99% случаях на готовый продукт из Китая вы просто добавляете свой логотип и делаете уникальную коробку). При запуске товара по данной стратегии нужно ориентироваться на суммы от 5-6 тысяч долларов и выше. Если рассматривать стратегию Онлайн Арбитраж, когда вы закупаете несколько разных товаров небольшими партиями и продаете через чужие листинги, то зарабатывать по данной стратегии можно хоть с 200-300$, но в идеале нужно иметь хотя бы 1500$ для полноценной работы.</p>
+				<p>Минимальные вложения по стратегии Онлайн Арбитраж - от 6-7 тысяч долларов, минимальные вложения по стратегии Private Label от 20 тысяч долларов. На эти суммы вы сможете как запуститься самостоятельно, так и заказать наши услуги по запуску бизнеса на Amazon "под ключ".</p>
 
 				<h2>2. Какой товар можно продавать?</h2>
 
@@ -88,7 +88,7 @@
 
 				<h2>3. Где найти поставщика и сколько товара нужно закупить?</h2>
 
-				<p>Поставщика для стратегии Private Label нужно искать в Китае, это достаточно легко. Мы при запуске пользуемся услугами брокера в Китае, который ищет товар под ключ и договаривается с поставщиками. Получается даже выгоднее, чем искать самому. Для теста ниши можно закупить хоть 200-300 единиц, чтобы проверить продажи. Далее нужно обсуждать с поставщиком условия поставок таким образом, чтобы получить максимально выгодную оптовую цену и закупать товар на 2-3 месяца продаж сразу. Если работаем по стратегии Онлайн Арбитраж, то нужно найти искать поставщиков в США, и закупать товар маленькими партиями, для начала можно закупить хоть 5 единиц товара.</p>
+				<p>Поставщика для стратегии Private Label нужно искать в Китае, это достаточно нелегко. Мы при запуске пользуемся услугами брокера в Китае, который ищет товар под ключ и договаривается с поставщиками. Далее мы тщательно проверяем поставщика самостоятельно. Для теста ниши можно закупить около 1000 единиц товара, чтобы проверить продажи. Далее нужно обсуждать с поставщиком условия поставок таким образом, чтобы получить максимально выгодную оптовую цену и закупать товар на 2-3 месяца продаж сразу. Если работаем по стратегии Онлайн Арбитраж, то нужно найти искать поставщиков так же в Китае, и закупать товар маленькими партиями, для начала можно закупить около 200-300 единиц товара.</p>
 
 				<h2>4. Как организовать доставку клиенту?</h2>
 
@@ -96,7 +96,7 @@
 
 				<h2>5. Сколько можно зарабатывать на Amazon?</h2>
 
-				<p>Потолка прибыли на Amazon попросту нет. Тут все зависит от ваших действий и от правильно выбранного товара, на хорошем товаре можно зарабатывать 30-70% чистой прибыли к вашим вложениям ежемесячно. Да, это огромные проценты прибыли в долларах, но для товарного бизнеса в этом нет ничего не обычного.</p>
+				<p>Потолка прибыли на Amazon попросту нет. Тут все зависит от ваших действий и от правильно выбранного товара, на хорошем товаре можно зарабатывать от 50 до 120% чистой прибыли к вашим вложениям. Да, это огромные проценты прибыли в долларах, но для товарного бизнеса это стандартные показатели.</p>
 
 				<h2>6. Как быстро можно окупить свои вложения?</h2>
 
@@ -119,9 +119,9 @@
 
 				<p>Если вы знаете английский язык, то конечно это будет плюсом. Для работы с Amazon достаточно простого онлайн переводчика. С ростом оборотов и прибыли, конечно можно найти себе в помощники переводчика со знанием языка, но это совсем не обязательно.</p>
 
-				<h2>9. Сложно ли будет зарабатывать на Amazon, если нет опыта в бизнесе</h2>
+				<h2>9. Сложно ли будет зарабатывать на Amazon, если нет опыта в бизнесе?</h2>
 
-				<p>На самом деле, бизнес на Amazon гораздо проще, чем практически любой другой бизнес. На это есть простые причины: не нужно уметь продавать, не нужно уметь общаться с клиентами, не нужно заниматься доставкой и организацией сервиса для клиентов, т.к. все уже продумано и решено за вас самим Амазоном. Именно поэтому новичку гораздо легче запустить бизнес на Amazon, чем практически любой другой бизнес. Вы даже можете не разбираться в рекламе, т.к. есть автоматическая реклама Amazon и стратегии, для которых реклама не нужна. Но, в любом случае, вам предстоит узнать много нового и разобраться во многих нюансах.</p>
+				<p>Чтобы зарабатывать на Amazon вам нужно будет изучить много информации и получить опыт торговли на данной площадки. Бизнес на Amazon - это сложный бизнес. Разобраться в нем более чем реально, но нужно быть готовым к тому, что придется работать.</p>
 
 				<h2>10. Какой шанс, что я вложу деньги в Amazon, и у меня ничего не получится и я всё потеряю?</h2>
 
@@ -136,45 +136,6 @@
 
 				<a href="https://amazing-cash.ru/blog/index-blog.html" class="back-to-blog">Вернуться к списку статей</a>
 
-			</div>
-		</div>
-	</section>
-
-
-
-	<section class="callback-section">
-		<div class="container">
-
-			<div class="callback-grid">
-				<div class="callback-text">
-					<h5>Хотите начать зарабатывать онлайн в долларах?</h5>
-					<p>Оставьте заявку, и получите пошаговый план запуска бизнеса на Amazon</p>
-				</div>
-
-
-				<div id="booking" class="callback-form">
-
-					<form class="form open-form" onsubmit="ym(65271577,'reachGoal','open-form')" action="https://app.getresponse.com/add_subscriber.html" accept-charset="utf-8" method="post">
-						<div class="success"><span>Спасибо за заявку!<br><span>наш менеджер свяжется с вами в ближайшее
-						время</span></span></div>
-						<!-- Hidden Required Fields -->
-						<input type="hidden" name="project_name" value="Франшиза 'Рук не хватает'">
-						<input type="hidden" name="form_subject" value="План запуска">
-						<!-- END Hidden Required Fields -->
-						<div class="inputs">
-							<input class="input" type="text" name="Имя" placeholder="Ваше имя" required>
-							<input class="input phone" id="phone" type="text" name="Телефон" placeholder="Номер телефона" required>
-							<input class="input" type="text" name="email" placeholder="E-mail" required>
-						</div>
-
-						<button class="button submit-button"><span>Получить план</span></button>
-						<div class="confirm">
-							<input type="checkbox" required checked>
-							<p class="personal-data">Нажимая кнопку «Оставить заявку», я даю свое согласие на использование <br>и обработку моих персональных данных в соответствии с ч. 1 ст. 9 ФЗ <br>от 27.07.2006 г. № 152 «О персональных данных»</p>
-						</div>
-					</form>
-
-				</div>
 			</div>
 		</div>
 	</section>
