--- a/app/single-is-easy.html
+++ b/app/single-is-easy.html
@@ -76,57 +76,20 @@
 		<div class="container">
 			<div class="single-content">
 
-				<p>Всем привет, на связи Егор Романов! Я не знаю почему, но очень часто у меня спрашивают именно вот такие вопросы. Видимо многие люди реально надеяться найти какой-то максимально простой бизнес, в котором не будет риска, да и который будет приносить хорошую прибыль. Если что-то подобное интересует и вас, то когда найдете (никогда), обязательно сообщите об этом восьмом чуде света мне)))</p>
+				<p>Приветствую, на связи Егор Романов, основатель Amazing Cash. Не знаю почему, но очень часто у меня спрашивают именно вот такие вопросы. Видимо многие люди реально надеяться найти какой-то максимально простой бизнес, в котором не будет риска, да и который будет приносить хорошую прибыль. Если что-то подобное интересует и вас, то когда найдете (никогда), обязательно сообщите об этом восьмом чуде света мне.</p>
 
-				<p>А теперь хочу поделиться с моим видением этой ситуации относительно вообще любого бизнеса. Начнём с того, что вопрос "просто ли вести какой-либо бизнес" вообще не стоит задавать никому и никогда. Почему я так считаю? Потому что у всех людей разный опыт, у всех разные знания, у всех разные возможности. Просто или сложно - это только субъективное мнение. Тоже самое, если бы вы спросили у повара в ресторане, трудно ли приготовить какое-то блюдо? Он бы, скорее всего, ответил "нет", т.к. это его работа, которую он делает каждый день. Но если вы не знаете, как сварить яйцо, то готовить какое-то блюдо из высокой кухни вам наверняка будет трудно, несмотря на то что повар сказал, что это не трудно. Думаю логика предельно понятна)</p>
+				<p>А теперь хочу поделиться с моим видением этой ситуации относительно вообще любого бизнеса. Начнём с того, что вопрос "просто ли вести какой-либо бизнес" вообще не стоит задавать никому и никогда. Почему я так считаю? Потому что у всех людей разный опыт, у всех разные знания, у всех разные возможности. Просто или сложно - это только субъективное мнение. Тоже самое, если бы вы спросили у повара в ресторане, трудно ли приготовить какое-то блюдо? Он бы, скорее всего, ответил "нет", т.к. это его работа, которую он делает каждый день. Но если вы не знаете, как сварить яйцо, то готовить какое-то блюдо из высокой кухни вам наверняка будет трудно, несмотря на то что повар сказал, что это не трудно. Думаю, логика предельно понятна.</p>
 
-				<p>Например, я занимаюсь предпринимательством (если можно так сказать) с 16 лет. В этом возрасте я начал покупать айфоны на авито и перепродавать их там же с наценкой. Было ли мне сложно? Вначале да, потом я научился, и это стало легко. Потом я сделал интернет-магазин, у меня ничего не получалось, было сложно, потом я стал понимать как это работает, потом начало получаться и было легко. Потом я занимался маркетингом, поставками с Китая, создавал франшизы для действующих бизнесов, и потом пришел к Amazon. Было ли мне сложно? В каждом бизнесе вначале мне было всегда сложно, но с каждым новым опытом мне становилось всё легче и легче, т.к. на основе предыдущего опыта я уже имел какие-то навыки. Сейчас мне 26 лет, т.е. если учитывать всякие мелкие попытки предпринимательства по типу перепродаж на Авито, то я занимаюсь "бизнесом" 10 лет. И я на 100% уверен, что если бы 2 года назад я пришел в Amazon, и у меня бы не было предыдущего 10-летнего опыта в бизнесе, то мои результаты сейчас были бы гораздо хуже, и двигался я бы гораздо медленнее. Поэтому, когда вы интересуетесь, просто ли вам будет заработать на Amazon или легко, то я не знаю, у каждого свои навыки и каждый развивается с разной скоростью.</p>
+				<p>Например, я занимаюсь предпринимательством (если можно так сказать) с 16 лет. В этом возрасте я начал покупать айфоны на авито и перепродавать их там же с наценкой. Было ли мне сложно? Вначале да, потом я научился, и это стало легко. Через год я создал свой первый интернет-магазин, и у меня ничего не получалось, было сложно, потом я стал понимать как это работает, потом начало получаться и было легко. Потом я занимался маркетингом, поставками с Китая, создавал франшизы для действующих бизнесов, и потом пришел к Amazon. Было ли мне сложно? В каждом бизнесе вначале мне было всегда сложно, но с каждым новым опытом мне становилось всё легче и легче, т.к. на основе предыдущего опыта я уже имел какие-то навыки. Сейчас мне 27 лет, т.е. если учитывать всякие мелкие попытки предпринимательства по типу перепродаж на Авито, то я занимаюсь "бизнесом" уже более 10 лет. И я на 100% уверен, что если бы 3 года назад я пришел в Amazon, и у меня бы не было предыдущего 10-летнего опыта в бизнесе, то мои результаты сейчас были бы гораздо хуже, и двигался я бы гораздо медленнее. Поэтому, когда вы интересуетесь, просто ли вам будет заработать на Amazon или легко, то я не знаю, у каждого свои навыки и каждый развивается с разной скоростью.</p>
 
-				<p>Теперь поговорим про риски. Как может в каком-либо бизнесе не быть риска? Вы серьезно верите, что это возможно? Тогда зайдите в Википедию, и прочитайте, что такое предпринимательство (спойлер: осуществляемая на свой РИСК деятельность). Любой бизнес - это всегда риск. Чем больше потенциальная прибыль, тем больше потенциальный риск. Я, вроде как, всегда и везде про это говорил и продолжаю говорить, но есть люди, которые верят, что бывают бизнесы без риска. Даже если вы решили начать свой путь в бизнесе с малого, и купите 1 чехол на новый айфон на алиэкспресе, чтобы продать его в России с наценкой в 10 рублей, то даже в этом случае у вас есть риск, что он никогда не продастся.</p>
+				<p>Теперь поговорим про риски. Как может в каком-либо бизнесе не быть риска? Вы серьезно верите, что это возможно? Тогда зайдите в Википедию, и прочитайте, что такое предпринимательство (спойлер: осуществляемая на свой РИСК деятельность). Любой бизнес — это всегда риск. Чем больше потенциальная прибыль, тем больше потенциальный риск. Я, вроде как, всегда и везде про это говорил и продолжаю говорить, но есть люди, которые верят, что бывают бизнесы без риска. Даже если вы решили начать свой путь в бизнесе с малого, и купите 1 чехол на новый айфон на алиэкспресе, чтобы продать его в России с наценкой в 10 рублей, то даже в этом случае у вас есть риск, что он никогда не продастся.</p>
 
-				<p>Что делать с риском? Любой риск точно так же связан с знаниями и опытом в бизнесе. Чем больше знаний и опыта, тем больше шансов минимизировать риски, но чтобы в каком-то бизнесе (или вообще в любом способе заработка денег) не было риска - это сказки. Поэтому формула "успешного успеха" в любом бизнесе всегда будет одинакова - работать, развиваться, получать опыт, знаний, навыки, и рано или поздно результат приходит, а если вы будете искать халяву, и искать сферу, где всё просто и нет риска, то вряд ли с таким настроем у вас что-то когда-то получится.</p>
+				<p>Что делать с риском? Любой риск точно так же связан с знаниями и опытом в бизнесе. Чем больше знаний и опыта, тем больше шансов минимизировать риски, но, чтобы в каком-то бизнесе (или вообще в любом способе заработка денег) не было риска — это сказки. Поэтому формула "успешного успеха" в любом бизнесе всегда будет одинакова - работать, развиваться, получать опыт, знаний, навыки, и рано или поздно результат приходит, а если вы будете искать халяву, и искать сферу, где всё просто и нет риска, то вряд ли с таким настроем у вас что-то когда-то получится.</p>
+
+				<p>Чем мне нравится бизнес на Amazon, так это тем, что тут возможно минимизировать свои риски. Основной риск товарного бизнеса в том, что тот товар, который вы выбрали, не будут покупать. У Amazon достаточно подробная аналитика, и с помощью множества программ и сервисов, вы можете выбрать товар, который будет пользоваться спросом на Amazon. То есть основной риск товарного бизнеса на Amazon можно закрыть с помощью аналитики. Когда вы нашли хороший товар для продажи, то вам нужно закупить товар оптом в Китае и доставить в США, в среднем на это уходит от 2 месяцев, и бывают случаи, когда за это время ситуация на рынке меняется, и товар становится уже не таким привлекательным. В этом и заключается основной риск. Например, вы выбрали товар, а за то время, пока он изготавливался и ехал, сильно выросла конкуренция, или упали цены, или упал спрос. Конечно, это бывает редко, и в этом случае вы всегда можете распродать товар дешевле, чем планировали, но этими рисками не стоит пренебрегать, и стоит всегда адекватно относиться к рискам любого бизнеса.</p>
 
 				<a href="https://amazing-cash.ru/blog/index-blog.html" class="back-to-blog">Вернуться к списку статей</a>
 
-			</div>
-		</div>
-	</section>
-
-
-
-	<section class="callback-section">
-		<div class="container">
-
-			<div class="callback-grid">
-				<div class="callback-text">
-					<h5>Хотите начать зарабатывать онлайн в долларах?</h5>
-					<p>Оставьте заявку, и получите пошаговый план запуска бизнеса на Amazon</p>
-				</div>
-
-
-				<div id="booking" class="callback-form">
-
-					<form class="form open-form" onsubmit="ym(65271577,'reachGoal','open-form')" action="https://app.getresponse.com/add_subscriber.html" accept-charset="utf-8" method="post">
-						<div class="success"><span>Спасибо за заявку!<br><span>наш менеджер свяжется с вами в ближайшее
-						время</span></span></div>
-						<!-- Hidden Required Fields -->
-						<input type="hidden" name="project_name" value="Франшиза 'Рук не хватает'">
-						<input type="hidden" name="form_subject" value="План запуска">
-						<!-- END Hidden Required Fields -->
-						<div class="inputs">
-							<input class="input" type="text" name="Имя" placeholder="Ваше имя" required>
-							<input class="input phone" id="phone" type="text" name="Телефон" placeholder="Номер телефона" required>
-							<input class="input" type="text" name="email" placeholder="E-mail" required>
-						</div>
-
-						<button class="button submit-button"><span>Получить план</span></button>
-						<div class="confirm">
-							<input type="checkbox" required checked>
-							<p class="personal-data">Нажимая кнопку «Оставить заявку», я даю свое согласие на использование <br>и обработку моих персональных данных в соответствии с ч. 1 ст. 9 ФЗ <br>от 27.07.2006 г. № 152 «О персональных данных»</p>
-						</div>
-					</form>
-
-				</div>
 			</div>
 		</div>
 	</section>
