--- a/app/single-lot-competition.html
+++ b/app/single-lot-competition.html
@@ -76,19 +76,23 @@
 		<div class="container">
 			<div class="single-content">
 
-				<p>Всем привет! На связи Егор Романов, и я часто слышу стереотип, что на Amazon очень большая конкуренция, и из-за этого там сложно заработать. Давайте разберемся, действительно ли это так?!</p>
+				<p>Приветствую! На связи Егор Романов, основатель Amazing Cash! Я часто слышу стереотип, что на Amazon очень большая конкуренция, и из-за этого там сложно заработать. Давайте разберемся, действительно ли это так?</p>
 
-				<p>Давайте для начала представим, что перед вами стоит задача наловить 50 кг рыбы за 1 день. Где вы будете это делать: в речке, в которой проплывает одна 100-граммовая рыбёшка в час, но на этой речке вы будете стоять и рыбачить один, или в озере, в котором плавают тонны крупной рыбы, но с вами ловят эту рыбу сотни рыбаков?! Я думаю ответ очевиден, так же и с продажами на Amazon.</p>
+				<p>На Amazon действительно торгуют продавцы со всего мира. и вам предстоит конкурировать с предпринимателями с разных точек планеты. Но есть очень важный нюанс. Абсолютное большинство продавцов, которые приходят на Амазон – это не профессиональные продавцы. Они приходят на Амазон, потому что просто услышали, что Амазон это самый крупный в мире маркетплейс, и они решили, что заработать там легко и просто. Абсолютное большинство продавцов именно из этой категории, они приходят на Амазон и не хотят развиваться, они просто думают, что это какая-то трендовая площадка с огромным количеством продаж на которой легко заработать, и этот подход абсолютно неверен. То есть даже если конкуренция в принципе большая, то конкурируете вы не со всеми, а только с теми продавцами, кто профессионально занимается Амазоном. Вы легко обойдете большинство продавцов, которые пришли на Амазон непонятно зачем, и конкурировать будете только с профессионалами. Далее, даже если в общем на всем Амазон в принципе большая конкуренция, даже если не брать в расчет то, что большинство конкурентов не профессионалы, то есть огромное количество ниш на Амазоне, в которых практически нет конкуренции. И вас реально никак не касается то, что на Амазон много продавцов и конкуренция большая, ведь всегда можно найти нишу, в которой конкуренции практически нет.</p>
 
-				<p>На Amazon, естественно, есть конкуренция. Не даром это самый топовый интернет-ресурс по продаже товаров в мире. Но скажите честно, в какой сфере сфере сейчас нет конкуренции? У меня на ум приходят два варианта. Во-первых в никому ненужных нишах: например, подкидываю идею, можете шить пляжные костюмы для морских котиков и продавать их где-нибудь в Антарктиде (или где там они обитают), вряд ли вы конечно что-то заработаете, но зато никакой конкуренции. Во-вторых, нет конкуренции в трендовых темах, и то, если вы реализуете эту тему первым. Например, если бы вы первым привезли спиннеры в Россию, то вы бы хорошо заработали. Но какой шанс, что хоть раз в жизни вы словите такой тренд? Такой шанс ничтожно мал, но даже если вам сказочно повезет, и вы угадаете тренд и сделаете что-то первым, то через несколько месяцев вам придется искать новый тренд, т.к. в старом появиться бешеная конкуренция. Во всех остальных бизнесах вам придется сталкиваться с конкуренцией</p>
+				<p>Ну и конечно же важно понимать, что на Амазон ежедневно делается около 30 миллионов продаж. По последним данным, эта цифра даже выше, но вы только вдумайтесь – 30 миллионов продаж в день. Это огромное количество денег. Многие при этом так говорят о конкуренции, как будто они хотят забрать себе все эти 30 миллионов продаж. На самом деле, если вы делаете, к примеру 10 продаж в день с чистой прибылью в 10 долларов, то в месяц вы уже будете зарабатывать 3000 долларов. Вам не нужно миллионы продаж, вам нужно грубо говоря всего 10 продаж в день, чтобы уже нормально зарабатывать. Ниш, где это можно сделать без особой конкуренции – огромное множество. Ну и конечно, здоровая конкуренция никогда никому не мешала, и конкуренция только подталкивает бизнес вперед.</p>
 
-				<p>Почему люди бояться конкуренции? Потому что не хотят развиваться. Хочется ничего не делать и по-быстрому "срубить бабла". Такие люди обычно всю жизнь ищут «ту самую темку» на которой можно легко и быстро заработать, и как правило ничего не находят.</p>
+				<p>Конечно, не имеет смысл лезть в супер конкурентные ниши, но вы всегда сможете подобрать нишу, куда можно зайти с вашим бюджетом. Дело исключительно в выборе ниши и выборе товара для продажи, именно на этом этапе вы уже отсеиваете своих конкурентов. Да и сейчас, если посмотреть объективно, в мире нет ни одного бизнеса без конкуренции, если бизнес без конкуренции, то это никому ненужный бизнес, в котором нет денег. В сферах, где есть деньги, конкуренция будет всегда, и чем больше денег в сфере, тем больше будет конкуренция. Бегать от конкуренции просто глупо, нужно стараться стать чуточку лучше конкурентов, и тогда у вас не будет проблем.</p>
 
-				<p>Действительно ли на Amazon такая уж сильная конкуренция?! В некоторых нишах конкуренция действительно сильная и в них практически нереально зайти. Но если копнуть чуть глубже и поискать, то можно найти десятки тысяч разных ниш с большим спросом, в которые можно зайти с самой минимальной конкуренцией. Всё точно так же как и в любом традиционном бизнесе, есть ниши, в которых огромная конкуренция, есть ниши, где пока что конкуренции практически нет.</p>
+				<p>Ну и завершая тему конкуренции, хочу привести пример, который мне очень нравится. Например, у вас есть задача поймать 10 рыб. Где вы будете их ловить, в реке, где за день всего проплывает всего 10 рыб, которые даже вряд ли заметят вашу наживку, но зато вы будете на этой реке один, без других рыбаков, или вы всё таки пойдете на ту реку, через которую ежедневно пропыывают 30 миллионов рыб, но рыбаков с вами будет много? Хоть я и не рыбак, но думаю очевидно, что во втором случае поймать 10 рыб гораздо легче.</p>
+
+				<p>Почему вообще люди бояться конкуренции? Единственный вариант, почему можно бояться конкуренции – это нежелание развиваться. Хочется ничего не делать и по-быстрому "срубить бабла". Такие люди обычно всю жизнь ищут «ту самую нишу» на которой можно легко и быстро заработать, и как правило ничего не находят.</p>
+
+				<p>Действительно ли на Amazon такая уж сильная конкуренция?! В некоторых нишах конкуренция действительно сильная и в них практически нереально зайти. Но если копнуть чуть глубже и поискать, то можно найти десятки тысяч разных ниш с большим спросом, в которые можно зайти с самой минимальной конкуренцией. Всё точно так же, как и в любом традиционном бизнесе, есть ниши, в которых огромная конкуренция, есть ниши, где пока что конкуренции практически нет.</p>
 
 				<p>Но главное то совсем не конкуренция, а то количество потенциальных клиентов, которое есть на Amazon. Вот именно по этому показателю у Amazon точно нет конкурентов и ориентироваться нужно именно на этом.</p>
 
-				<p>А знаете что говорит о конкуренции основатель Amazon Джефф Безос и самый богатый человек в мире?!</p>
+				<p>А знаете, что говорит о конкуренции основатель Amazon Джефф Безос и самый богатый человек в мире?!</p>
 
 				<p>«Принимая утром душ, наши конкуренты думают о том, как обойти того или иного соперника. Мы же в душе думаем об инновациях, которые сделают жизнь клиента лучше». (с) Джефф Безос</p>
 
@@ -96,45 +100,6 @@
 
 				<a href="https://amazing-cash.ru/blog/index-blog.html" class="back-to-blog">Вернуться к списку статей</a>
 
-			</div>
-		</div>
-	</section>
-
-
-
-	<section class="callback-section">
-		<div class="container">
-
-			<div class="callback-grid">
-				<div class="callback-text">
-					<h5>Хотите начать зарабатывать онлайн в долларах?</h5>
-					<p>Оставьте заявку, и получите пошаговый план запуска бизнеса на Amazon</p>
-				</div>
-
-
-				<div id="booking" class="callback-form">
-
-					<form class="form open-form" onsubmit="ym(65271577,'reachGoal','open-form')" action="https://app.getresponse.com/add_subscriber.html" accept-charset="utf-8" method="post">
-						<div class="success"><span>Спасибо за заявку!<br><span>наш менеджер свяжется с вами в ближайшее
-						время</span></span></div>
-						<!-- Hidden Required Fields -->
-						<input type="hidden" name="project_name" value="Франшиза 'Рук не хватает'">
-						<input type="hidden" name="form_subject" value="План запуска">
-						<!-- END Hidden Required Fields -->
-						<div class="inputs">
-							<input class="input" type="text" name="Имя" placeholder="Ваше имя" required>
-							<input class="input phone" id="phone" type="text" name="Телефон" placeholder="Номер телефона" required>
-							<input class="input" type="text" name="email" placeholder="E-mail" required>
-						</div>
-
-						<button class="button submit-button"><span>Получить план</span></button>
-						<div class="confirm">
-							<input type="checkbox" required checked>
-							<p class="personal-data">Нажимая кнопку «Оставить заявку», я даю свое согласие на использование <br>и обработку моих персональных данных в соответствии с ч. 1 ст. 9 ФЗ <br>от 27.07.2006 г. № 152 «О персональных данных»</p>
-						</div>
-					</form>
-
-				</div>
 			</div>
 		</div>
 	</section>
