--- a/app/single-myths.html
+++ b/app/single-myths.html
@@ -108,49 +108,10 @@
 
 				<h2>Миф №5. Чтобы заработать на Amazon нужно много вложений.</h2>
 
-				<p>Чем больше вы хотите заработать, тем больше нужно вложить. С этим на Amazon всё логично. На Amazon нельзя вложить 1 доллар, а в следующем месяце заработать с него 1000 долларов. Но, несмотря на это, бизнес на Amazon можно начать даже с вложениями 200-300 долларов, и потом расти постепенно. Конечно, если вы хотите запустить Private Label, то вам понадобиться хотя бы 4-5 тысяч долларов, но какой бизнес вообще можно открыть за такие деньги? Так что, если сравнить Amazon с другими бизнесам, то по соотношению первоначальных вложений и потенциальной прибыли Amazon будет в лидерах.</p>
+				<p>Чем больше вы хотите заработать, тем больше нужно вложить. С этим на Amazon всё логично. На Amazon нельзя вложить 1 доллар, а в следующем месяце заработать с него 1000 долларов. Но, несмотря на это, бизнес на Amazon можно начать даже с вложениями от 6-7 тысяч долларов, и потом расти постепенно. Конечно, если вы хотите запустить Private Label, то вам понадобиться хотя бы 20 тысяч долларов, но какой бизнес вообще можно открыть даже в России с вложениями 6-7 тысяч долларов? Так что, если сравнить Amazon с другими бизнесам, то по соотношению первоначальных вложений и потенциальной прибыли Amazon будет в лидерах.</p>
 
 				<a href="https://amazing-cash.ru/blog/index-blog.html" class="back-to-blog">Вернуться к списку статей</a>
 
-			</div>
-		</div>
-	</section>
-
-
-
-	<section class="callback-section">
-		<div class="container">
-
-			<div class="callback-grid">
-				<div class="callback-text">
-					<h5>Хотите начать зарабатывать онлайн в долларах?</h5>
-					<p>Оставьте заявку, и получите пошаговый план запуска бизнеса на Amazon</p>
-				</div>
-
-
-				<div id="booking" class="callback-form">
-
-					<form class="form open-form" onsubmit="ym(65271577,'reachGoal','open-form')" action="https://app.getresponse.com/add_subscriber.html" accept-charset="utf-8" method="post">
-						<div class="success"><span>Спасибо за заявку!<br><span>наш менеджер свяжется с вами в ближайшее
-						время</span></span></div>
-						<!-- Hidden Required Fields -->
-						<input type="hidden" name="project_name" value="Франшиза 'Рук не хватает'">
-						<input type="hidden" name="form_subject" value="План запуска">
-						<!-- END Hidden Required Fields -->
-						<div class="inputs">
-							<input class="input" type="text" name="Имя" placeholder="Ваше имя" required>
-							<input class="input phone" id="phone" type="text" name="Телефон" placeholder="Номер телефона" required>
-							<input class="input" type="text" name="email" placeholder="E-mail" required>
-						</div>
-
-						<button class="button submit-button"><span>Получить план</span></button>
-						<div class="confirm">
-							<input type="checkbox" required checked>
-							<p class="personal-data">Нажимая кнопку «Оставить заявку», я даю свое согласие на использование <br>и обработку моих персональных данных в соответствии с ч. 1 ст. 9 ФЗ <br>от 27.07.2006 г. № 152 «О персональных данных»</p>
-						</div>
-					</form>
-
-				</div>
 			</div>
 		</div>
 	</section>
