--- a/app/single-product-sells.html
+++ b/app/single-product-sells.html
@@ -80,58 +80,14 @@
 
 				<h2>Онлайн Арбитраж</h2>
 
-				<p>В случае со стратегией Онлайн Арбитраж этот риск практически никак на вас не влияет. При работе по этой стратегии вы
-				закупаете разные продукты по 20-30 единиц каждого. То есть, на один продукт вы тратите до 100-150$. Если ваш продукт
-				будет продаваться очень плохо, например, 1 раз в неделю, то вы в любом случае за 2-3 месяца выйдете в плюс по этом
-				продукту. Да, другие продукты при этом у вас будут разлетаться гораздо быстрее, но ничего страшного в этом нет, т.к.
-				во-первых на один продукт приходится очень маленькая сумма вложений, а во-вторых даже если скорость продаж у какого-то
-				продукта будет маленькой, то в конечном итоге вы всё равно заработаете с распродажи этого продукта. Если товар не продается от слова "совсем", то в этом случае вы можете запустить рекламу на свой товар, и продать его быстрее, но с меньшей выгодной или в небольшой минус, чтобы не платить за хранение товара.</p>
+				<p>При работе по этой стратегии вы закупаете разные продукты по 200-300 единиц каждого. То есть, на один продукт вы тратите до 1500-2500$. Если ваш продукт будет продаваться не очень хорошо, то вы в любом случае распродадите его за относительно быстрое время, т.к. партия небольшая. Если у вас несколько продуктов, то другие продукты при этом у вас будут продаваться гораздо быстрее и в этом случае за счет диверсификации вы в любом случае хорошо заработаете. В любом случае вы вкладываете деньги в товар, который рано или поздно всё равно продастся и принесет вам выручку.</p>
 
 				<h2>Private Label</h2>
 
-				<p>При работе по данной стратегии нужно заранее просчитывать риски, т.к. вы запускаете один продукт, и под этот продукт создаете продающие материалы, фотографии, настраиваете рекламу, и если продукт не заходит и плохо продается, то с медленной распродажи товара вы конечно можете отбить вложения в сам товар или хотя бы часть вложений в товар, но вот вложения на продающие материалы при плохих продажах вы вряд ли покроете. Поэтому, при работе по стратегии Private Label, самым главным является точный выбор товара. Как только вы выбрали товар, нужно протестировать его с минимальными вложениями, а именно купить самую минимальную партию товара, и потратить минимальное количество денег на запуск. Далее, уже по результатам распродажи мелкой партии товара, вы получите либо готовый к продаже товар, который можно продавать без риска, либо вы сможете искать дальнейший товар для теста.</p>
+				<p>При работе по данной стратегии нужно заранее просчитывать риски, т.к. вы запускаете один продукт, и под этот продукт создаете продающие материалы, фотографии, настраиваете рекламу, и если продукт не заходит и плохо продается, то с медленной распродажи товара вы конечно можете отбить вложения в сам товар или хотя бы часть вложений в товар, но вот вложения на продающие материалы при плохих продажах вы вряд ли покроете. Поэтому, при работе по стратегии Private Label, самым главным является точный выбор товара. Как только вы выбрали товар, нужно протестировать его с минимальными вложениями, а именно купить самую минимальную партию товара, сделать продающие материалы своими руками, и потратить минимальное количество денег на запуск. Далее, уже по результатам распродажи мелкой партии товара, вы получите либо готовый к продаже товар, который можно продавать без риска, либо вы сможете искать дальнейший товар для теста.</p>
 
 				<a href="https://amazing-cash.ru/blog/index-blog.html" class="back-to-blog">Вернуться к списку статей</a>
 
-			</div>
-		</div>
-	</section>
-
-
-
-	<section class="callback-section">
-		<div class="container">
-
-			<div class="callback-grid">
-				<div class="callback-text">
-					<h5>Хотите начать зарабатывать онлайн в долларах?</h5>
-					<p>Оставьте заявку, и получите пошаговый план запуска бизнеса на Amazon</p>
-				</div>
-
-
-				<div id="booking" class="callback-form">
-
-					<form class="form open-form" onsubmit="ym(65271577,'reachGoal','open-form')" action="https://app.getresponse.com/add_subscriber.html" accept-charset="utf-8" method="post">
-						<div class="success"><span>Спасибо за заявку!<br><span>наш менеджер свяжется с вами в ближайшее
-						время</span></span></div>
-						<!-- Hidden Required Fields -->
-						<input type="hidden" name="project_name" value="Франшиза 'Рук не хватает'">
-						<input type="hidden" name="form_subject" value="План запуска">
-						<!-- END Hidden Required Fields -->
-						<div class="inputs">
-							<input class="input" type="text" name="Имя" placeholder="Ваше имя" required>
-							<input class="input phone" id="phone" type="text" name="Телефон" placeholder="Номер телефона" required>
-							<input class="input" type="text" name="email" placeholder="E-mail" required>
-						</div>
-
-						<button class="button submit-button"><span>Получить план</span></button>
-						<div class="confirm">
-							<input type="checkbox" required checked>
-							<p class="personal-data">Нажимая кнопку «Оставить заявку», я даю свое согласие на использование <br>и обработку моих персональных данных в соответствии с ч. 1 ст. 9 ФЗ <br>от 27.07.2006 г. № 152 «О персональных данных»</p>
-						</div>
-					</form>
-
-				</div>
 			</div>
 		</div>
 	</section>
